--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "lodash": "^4.17.21",
+    "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-pro-sidebar": "^1.0.0",
+    "react-resizable": "^3.0.5",
+    "react-rnd": "^10.4.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "util": "^0.12.5",
